Animation composant 'Collapse' : Correction du 'margin-top'(-300px) à la fermeture du 'collapse'

--- a/src/components/collapse/index.css
+++ b/src/components/collapse/index.css
@@ -53,7 +53,7 @@
 }
 
 .hidden{
-	margin-top:-220px;
+	margin-top:-300px;
 	margin-bottom: 0px;
 	padding: 3%;
 	list-style: none;
